add blog and minor changes

--- a/src/content/blog/lomba-kebaya-gaya-modern.mdx
+++ b/src/content/blog/lomba-kebaya-gaya-modern.mdx
@@ -1,10 +1,10 @@
 ---
-title: "Coffee: Aromatic Elixir of Energy and Delight"
+title: "Lomba Kebaya Gaya Modern"
 pubDate: 2023-06-29
-intro: Coffee, with its enticing aroma and invigorating taste, has become an integral part of many people's daily lives.
-tag: coffee
+intro: Lomba Kebaya Gaya Modern
+tag: lomba batik
 author: palmiak
-image: ../../assets/featured-3.jpg
+image: ../../assets/blog/blog2.png
 
 ---
 Coffee, with its enticing aroma and invigorating taste, has become an integral part of many people's daily lives. This caffeinated beverage has a rich history, a global following, and a myriad of health benefits. In this essay, we will explore the fascinating world of coffee and delve into its origins, cultural significance, and the various ways it can be enjoyed.
