--- a/src/content/blog/lomba-kebaya-yogyakarta.mdx
+++ b/src/content/blog/lomba-kebaya-yogyakarta.mdx
@@ -1,13 +1,13 @@
 ---
-title: MD Kitchen Sink
+title: Lomba Kebaya Yogyakarta
 pubDate: 2023-06-30
-intro: Here at Qode Interactive, we believe typography should be approached with equal focus and care as any other design element. It’s not just that the fonts “carry” the text, they also imbue the design with particular psychological values and convey specific
-tag: dev
+intro: Lomba Kebaya Yogyakarta 
+tag: lomba batik
 author: palmiak
-image: ../../assets/featured.jpg
+image: ../../assets/blog/blog1.png
 ---
 import { Image } from 'astro:assets'
-import slide1 from '../../assets/slide-1.jpg';
+import slide1 from '../../assets/blog/blog1.png';
 
 ## Headers
 
