--- a/src/content/page/about-me.mdx
+++ b/src/content/page/about-me.mdx
@@ -1,7 +1,7 @@
 ---
-title: "About me"
-intro: Pacamara, a coveted coffee varietal, delights the senses with its exceptional flavor profile. 
-image: ../../assets/featured-3.jpg
+title: "Hari Batik Nasional 2024"
+intro: Acara Batik Tingkat Nasional untuk Melestarikan Batik 
+image: ../../assets/slide-5.jpg
 
 ---
 Pacamara coffee, a beloved gem among coffee enthusiasts, is a varietal that showcases the very best of what coffee has to offer. Born from a union of the Pacas and Maragogype cultivars, Pacamara presents a truly unique and captivating flavor profile that sets it apart from other coffees.
