add about-me and button pendaftaran

--- a/src/content/blog/lomba-kebaya-gaya-modern.mdx
+++ b/src/content/blog/lomba-kebaya-gaya-modern.mdx
@@ -25,3 +25,7 @@ image: ../../assets/blog/blog2.png
 
 
 *Note : Untuk semua peserta harus mengetahui nama motif batik, arti dan maknanya.*
+
+<a href="https://bit.ly/SerasiKebayaBatik" target="_blank">
+  <button style="border-radius: 8px; padding: 8px; background-color: #0f766e; ">Klik Untuk Mendaftar Lomba </button>
+</a>
