--- a/src/content/blog/lomba-kebaya-yogyakarta.mdx
+++ b/src/content/blog/lomba-kebaya-yogyakarta.mdx
@@ -74,3 +74,7 @@ import slide1 from '../../assets/blog/blog1.png';
   * Pakai selendang
 
 *Note : Untuk semua peserta harus mengetahui nama motif batik, arti dan maknanya.*
+
+<a href="https://bit.ly/SerasiKebayaBatik" target="_blank">
+  <button style="border-radius: 8px; padding: 8px; background-color: #0f766e; ">Klik Untuk Mendaftar Lomba </button>
+</a>
