--- a/src/content/page/about-me.mdx
+++ b/src/content/page/about-me.mdx
@@ -4,12 +4,24 @@ intro: Acara Batik Tingkat Nasional untuk Melestarikan Batik
 image: ../../assets/slide-5.jpg
 
 ---
-Pacamara coffee, a beloved gem among coffee enthusiasts, is a varietal that showcases the very best of what coffee has to offer. Born from a union of the Pacas and Maragogype cultivars, Pacamara presents a truly unique and captivating flavor profile that sets it apart from other coffees.
+Selamat **Hari Batik Nasional 2024**. **PPBI Sekar Jagad** bekerja sama dengan **The Cabin Hotel** dan **Klinik Gigi Dentes** mengadakan ajang kontes bertajuk **Keserasian Berbusana Kebaya dan Batik untuk Wanita**, mari meriahkan peryaaan **Hari Batik Nasional 2024** dan rebut trophy penghargaan dari **GBPH. H. Prabukusumo, S. Psi**, piagam penghargaan, dan uang pembinaan senilai jutaan rupiah.
 
-One of the defining characteristics of Pacamara is its exceptional taste. This varietal offers a delightful combination of fruity and floral notes, creating a sensory experience that is both complex and satisfying. The tropical fruit flavors, often reminiscent of berries or stone fruits, dance on the palate, accompanied by subtle hints of jasmine, lavender, or rose. The balance between sweetness and acidity is carefully calibrated, resulting in a cup that is both bright and smooth.
+Kontes Berkebaya dan Batik untuk **dua kategori**, Kategori I Lomba Kebaya Yogyakarta dan Kategori II Lomba Kebaya Gaya Modern.
 
-Pacamara's distinct character can be attributed to its parentage. Pacas, a natural mutation of Bourbon, contributes its sweetness and nuanced flavors, while Maragogype, known for its large beans, adds body and depth to the blend. The fusion of these two cultivars produces a coffee that is bold yet elegant, delivering a truly remarkable drinking experience.
+### Hadiah Setiap Kategori:
+ - JUARA 1 Rp 2.000.000
+ - JUARA 2 Rp 1.500.000
+ - JUARA 3 Rp 1.250.000
 
-The cultivation and processing of Pacamara coffee require meticulous care. It thrives in high-altitude regions, such as El Salvador and Nicaragua, where the cool temperatures and volcanic soil impart unique characteristics to the beans. Farmers employ precise harvesting techniques and meticulous sorting to ensure only the finest beans make it into the final product.
+ - HARAPAN 1 Rp 1.000.000
+ - HARAPAN 2 Rp 750.000
+ - HARAPAN 3 Rp 500.000
 
-Pacamara coffee is a testament to the craftsmanship and passion of coffee producers. Its exceptional flavors and distinctive qualities have garnered a loyal following among coffee connoisseurs, who eagerly seek out this extraordinary varietal. Whether enjoyed as a pour-over, espresso, or any other brewing method, Pacamara offers a memorable and enchanting coffee experience.
+ - FAVORIT Rp 500.000
+
+ 
+Setiap Juara Terpilih akan Mendapat Trophy Penghargaan oleh **GBPH. H. Prabukusumo, S. Psi**.
+dan Piagam Penghargaan
+
+
+
