add wa, youtube and ig button

--- a/src/content/blog/lomba-kebaya-gaya-modern.mdx
+++ b/src/content/blog/lomba-kebaya-gaya-modern.mdx
@@ -5,27 +5,43 @@ intro: Lomba Kebaya Gaya Modern
 tag: lomba batik
 author: palmiak
 image: ../../assets/blog/blog2.png
-
 ---
 
-## Peraturan Umum 
+import { Image } from "astro:assets";
+import wabutton from "../../assets/WhatsAppButtonGreenSmall.png";
+
+## Peraturan Umum
 
 1.  Kain batik yang dipakai : Batik Nusantara, batik tulis/batik cap/kombinasi ( tidak boleh tekstil motif batik/printing )
-2.	Setiap peserta : harus bisa menjelaskan nama motif batik yang digunakan beserta arti/maknanya
-1.	Peserta berusia minimal 13 tahun
-
-
+2.  Setiap peserta : harus bisa menjelaskan nama motif batik yang digunakan beserta arti/maknanya
+3.  Peserta berusia minimal 13 tahun
 
 ## Peraturan Khusus
- 
-  * Kebaya bebas, bahan bebas
-  * Sanggul bebas, bukan imitasi
-  * Aksesoris bebas
-  * Selop bebas
 
+- Kebaya bebas, bahan bebas
+- Sanggul bebas, bukan imitasi
+- Aksesoris bebas
+- Selop bebas
 
 *Note : Untuk semua peserta harus mengetahui nama motif batik, arti dan maknanya.*
 
 <a href="https://bit.ly/SerasiKebayaBatik" target="_blank">
   <button style="border-radius: 8px; padding: 8px; background-color: #0f766e; ">Klik Untuk Mendaftar Lomba </button>
 </a>
+
+
+
+
+
+*Note : Untuk info lebih lanjut dapat menghubungi panitia.*
+
+<a
+      class=""
+      aria-label="Chat on WhatsApp"
+      href="https://wa.me/6283879591219?text=Halo,%20saya%20ingin%20bertanya%20mengenai%20Hari%20Batik%20"
+      target="_blank"
+    >
+
+<Image src={wabutton} width={300} height={60} alt="" />
+    </a>
+
