--- a/src/content/blog/lomba-kebaya-yogyakarta.mdx
+++ b/src/content/blog/lomba-kebaya-yogyakarta.mdx
@@ -6,8 +6,9 @@ tag: lomba batik
 author: palmiak
 image: ../../assets/blog/blog1.png
 ---
-import { Image } from 'astro:assets'
-import slide1 from '../../assets/blog/blog1.png';
+
+import { Image } from "astro:assets";
+import wabutton from "../../assets/WhatsAppButtonGreenSmall.png";
 
 ## Peraturan Umum 
 
@@ -78,3 +79,21 @@ import slide1 from '../../assets/blog/blog1.png';
 <a href="https://bit.ly/SerasiKebayaBatik" target="_blank">
   <button style="border-radius: 8px; padding: 8px; background-color: #0f766e; ">Klik Untuk Mendaftar Lomba </button>
 </a>
+
+
+
+
+
+
+*Note : Untuk info lebih lanjut dapat menghubungi panitia.*
+
+<a
+      class=""
+      aria-label="Chat on WhatsApp"
+      href="https://wa.me/6283879591219?text=Halo,%20saya%20ingin%20bertanya%20mengenai%20Hari%20Batik%20"
+      target="_blank"
+    >
+
+<Image src={wabutton} width={300} height={60} alt="" />
+    </a>
+
