--- a/src/content/blog/link-pendaftaran.mdx
+++ b/src/content/blog/link-pendaftaran.mdx
@@ -8,8 +8,34 @@ image: ../../assets/blog/blog3.png
 
 ---
 
+
+import { Image } from "astro:assets";
+import wabutton from "../../assets/WhatsAppButtonGreenSmall.png";
+
+
 ## Link Pendaftaran
 
-Link Pendaftaran: https://bit.ly/SerasiKebayaBatik
+Link Pendaftaran: 
+
+<a href="https://bit.ly/SerasiKebayaBatik" target="_blank">
+  <button style="border-radius: 8px; padding: 8px; background-color: #0f766e; ">Klik Untuk Mendaftar Lomba </button>
+</a>
 
 Link Lagu Kebaya Modern: https://youtu.be/hmCXZt_PdWQ?si=ma4PglXVkDbeVrWn
+
+
+
+
+
+*Note : Untuk info lebih lanjut dapat menghubungi panitia.*
+
+<a
+      class=""
+      aria-label="Chat on WhatsApp"
+      href="https://wa.me/6283879591219?text=Halo,%20saya%20ingin%20bertanya%20mengenai%20Hari%20Batik%20"
+      target="_blank"
+    >
+
+<Image src={wabutton} width={300} height={60} alt="" />
+    </a>
+
