add link drive for songs

--- a/src/content/blog/link-pendaftaran.mdx
+++ b/src/content/blog/link-pendaftaran.mdx
@@ -23,6 +23,8 @@ Link Pendaftaran:
 
 Link Lagu Kebaya Modern: https://youtu.be/hmCXZt_PdWQ?si=ma4PglXVkDbeVrWn
 
+Link Lagu Kebaya Tradisional dan Nasional Gaya Yogyakarta:  https://drive.google.com/drive/folders/1GllCda6zys8ZX4FAeYeUnsjmHbDbnicA?usp=drive_link
+
 
 
 
